Merge interview prep notes and update coding and system design references